[gd_scene load_steps=3 format=3 uid="uid://dhfup8p5rsx5h"]

[ext_resource type="Script" path="res://scene/minigame/test_minigame.gd" id="1_oa87c"]
[ext_resource type="Theme" uid="uid://cd478ei76tbcf" path="res://scene/ui/default-theme.tres" id="1_wlwcg"]

[node name="TestMinigame" type="Node2D"]
script = ExtResource("1_oa87c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wlwcg")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -10.0
offset_right = 20.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="CountdownLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Click"

[node name="ForceLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true
